--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,10 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="edu.umd.cmsc436.votr.MainActivity">
     <Button
         style="?android:attr/buttonStyleSmall"
@@ -20,8 +16,16 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Locations"
-        android:id="@+id/locations"
+        android:text="Polling Location"
+        android:id="@+id/polling_location"
         android:layout_below="@+id/candidates"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Early Vote Sites"
+        android:id="@+id/early_vote_sites"
+        android:layout_below="@+id/polling_location"
         android:layout_centerHorizontal="true" />
 </RelativeLayout>
