--- a/app/src/main/res/layout/candidate.xml
+++ b/app/src/main/res/layout/candidate.xml
@@ -4,8 +4,8 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="125dp"
+        android:layout_height="125dp"
         android:id="@+id/picture"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
@@ -36,4 +36,14 @@
         android:id="@+id/age"
         android:layout_below="@+id/party"
         android:layout_toEndOf="@+id/picture" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Status:"
+        android:id="@+id/status"
+        android:layout_below="@+id/age"
+        android:layout_toEndOf="@+id/picture" />
+
 </RelativeLayout>
