--- a/app/src/main/res/layout/tweet.xml
+++ b/app/src/main/res/layout/tweet.xml
@@ -4,8 +4,8 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:id="@+id/picture"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
@@ -17,5 +17,7 @@
         android:text="Name:"
         android:id="@+id/name"
         android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/picture" />
+        android:layout_toEndOf="@+id/picture"
+        android:textSize="16dp"
+        android:typeface="serif" />
 </RelativeLayout>
